<?xml version="1.0" encoding="utf-8"?>
<!--suppress ALL -->
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.lamz.kumpulandoadoa.presentation.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_about_us"
        android:name="com.lamz.kumpulandoadoa.presentation.ui.aboutus.AboutUsFragment"
        android:label="@string/title_about"
        tools:layout="@layout/fragment_aboutus"/>

    <fragment
        android:id="@+id/navigation_bookmark"
        android:name="com.lamz.bookmark.BookmarkFragment"
        android:label="@string/title_bookmark"
        tools:layout="@layout/fragment_bookmark"
        />
</navigation>